feat: paginated request, delete products endpoint
